# coven

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  scenarios.jsonl
.scratch-archive/fold-agent/: Cargo.toml  e2e_direct_cli.rs  run_scenarios.sh  run_user_test.sh  test_direct_cli_scenarios.rs  test_mux_backend.rs  user_simulation_test.rs
.scratch-archive/fold-tui/: Cargo.toml  scenario_1_http_health.sh  scenario_2_grpc_reflection.sh  scenario_3_grpc_getme.sh  scenario_4_fold_client.rs  scenario_5_no_async.rs  scenario_6_direct_grpc.rs  scenario_7_tailscale_grpc.rs  scenario_8_fixed_client.rs  scenario_all_packs_e2e.rs  scenario_cli_agent_e2e.rs  scenario_direct_message.rs  scenario_full_suite.rs  scenario_local_e2e.rs  scenario_local_test.rs  scenario_mcp_bridge_e2e.rs  scenario_message_test.rs  scenario_quick_e2e.rs
crates/coven-admin/: Cargo.toml
crates/coven-admin/src/: client.rs  lib.rs  main.rs
crates/coven-admin/src/commands/: agents.rs  bindings.rs  me.rs  mod.rs  principals.rs  token.rs
crates/coven-agent/: Cargo.toml
crates/coven-agent/src/: client.rs  lib.rs  main.rs  metadata.rs  pack_tool.rs  run.rs  tui.rs  wizard.rs
crates/coven-agent/src/single/: messages.rs  mod.rs  ui.rs
crates/coven-cli/: Cargo.toml
crates/coven-cli/src/: lib.rs  main.rs
crates/coven-client/: Cargo.toml  build.rs  uniffi-bindgen.rs
crates/coven-client/bindings/: coven_client.swift  coven_clientFFI.h
crates/coven-client/examples/: test-connect.rs
crates/coven-client/src/: client.rs  coven_client.udl  error.rs  lib.rs  models.rs
crates/coven-connect/: Cargo.toml
crates/coven-connect/src/: auth.rs  event.rs  lib.rs  registration.rs
crates/coven-core/: Cargo.toml
crates/coven-core/src/: config.rs  files.rs  lib.rs  mcp_http.rs  router.rs  store.rs  types.rs
crates/coven-core/src/backend/: amplifier_cli.rs  claude_sdk.rs  codex_cli.rs  direct_cli.rs  mod.rs  mux.rs  mux_tools.rs
crates/coven-grpc/: Cargo.toml
crates/coven-grpc/src/: channel.rs  error.rs  handler.rs  lib.rs  stream.rs
crates/coven-human/: Cargo.toml
crates/coven-human/src/: app.rs  lib.rs  messages.rs  ui.rs
crates/coven-link/: Cargo.toml
crates/coven-link/src/: config.rs  lib.rs  link.rs  main.rs
crates/coven-log/: Cargo.toml
crates/coven-log/src/: lib.rs
crates/coven-matrix-rs/: Cargo.toml  README.md  config.example.toml
crates/coven-matrix-rs/src/: bridge.rs  commands.rs  config.rs  error.rs  gateway.rs  lib.rs  main.rs  matrix.rs  setup.rs
crates/coven-matrix-rs/tests/: integration.rs
crates/coven-pack/: Cargo.toml
crates/coven-pack/src/: client.rs  config.rs  error.rs  handler.rs  lib.rs  manifest.rs
crates/coven-proto/: Cargo.toml  build.rs
crates/coven-proto/proto-src/: coven.proto
crates/coven-proto/src/: lib.rs
crates/coven-serve/: Cargo.toml
crates/coven-serve/src/: lib.rs  server.rs  store.rs
crates/coven-serve/src/services/: client.rs  control.rs  mod.rs  pack.rs
crates/coven-slack-rs/: Cargo.toml  README.md  config.example.toml
crates/coven-slack-rs/src/: bridge.rs  commands.rs  config.rs  context.rs  error.rs  gateway.rs  lib.rs  main.rs  slack.rs
crates/coven-slack-rs/tests/: integration.rs
crates/coven-swarm/: Cargo.toml
crates/coven-swarm-core/: Cargo.toml
crates/coven-swarm-core/src/: config.rs  lib.rs
crates/coven-swarm/src/: init.rs  lib.rs  main.rs
crates/coven-swarm/src/agent/: grpc.rs  mod.rs  pack_tool.rs  session.rs
crates/coven-swarm/src/supervisor/: discover.rs  socket.rs  spawn.rs  tui.rs
crates/coven-telegram-rs/: Cargo.toml  README.md  config.example.toml
crates/coven-telegram-rs/src/: bridge.rs  commands.rs  config.rs  context.rs  error.rs  gateway.rs  lib.rs  main.rs  telegram.rs
crates/coven-telegram-rs/tests/: integration.rs
crates/coven-tui/: Cargo.toml
crates/coven-tui-v2/: Cargo.toml
crates/coven-tui-v2/src/: app.rs  client.rs  lib.rs  main.rs  run.rs  types.rs
crates/coven-tui-v2/src/cli/: mod.rs  send.rs  setup.rs
crates/coven-tui-v2/src/ui/: approval.rs  chat.rs  input.rs  mod.rs  picker.rs  status.rs
crates/coven-tui/src/: app.rs  app_event.rs  client_bridge.rs  error.rs  lib.rs  main.rs  registration.rs
crates/coven-tui/src/cli/: agents.rs  doctor.rs  mod.rs  send.rs  setup.rs
crates/coven-tui/src/state/: config.rs  mod.rs
crates/coven-tui/src/state/snapshots/: coven_chat__state__config__tests__default_config_toml_snapshot.snap  coven_tui__state__config__tests__config_debug_snapshot.snap  folder__state__config__tests__default_config_toml_snapshot.snap
crates/coven-tui/src/theme/snapshots/: coven_chat__theme__tests__default_theme_snapshot.snap  coven_chat__theme__tests__theme_list_snapshot.snap  coven_chat_legacy__theme__tests__light_theme_snapshot.snap  (+12 more)
crates/coven-tui/src/tui/: event.rs  frame.rs  mod.rs
crates/coven-tui/src/widgets/: chat.rs  mod.rs  picker.rs  status_bar.rs
crates/fold-agent/: Cargo.toml
crates/fold-agent/src/: client.rs  lib.rs  main.rs  metadata.rs  pack_tool.rs  run.rs  tui.rs  wizard.rs
crates/fold-agent/src/single/: app.rs  input.rs  mod.rs  theme.rs  ui.rs
crates/fold-cli/: Cargo.toml
crates/fold-cli/src/: lib.rs  main.rs
crates/fold-client/: Cargo.toml  build.rs  uniffi-bindgen.rs
crates/fold-client/bindings/: fold_client.swift  fold_clientFFI.h  fold_clientFFI.modulemap  module.modulemap
crates/fold-client/examples/: test-connect.rs
crates/fold-client/src/: client.rs  error.rs  fold_client.udl  lib.rs  models.rs
crates/fold-core/: Cargo.toml
crates/fold-core/src/: config.rs  files.rs  lib.rs  mcp_http.rs  router.rs  store.rs  types.rs
crates/fold-core/src/backend/: direct_cli.rs  mod.rs  mux.rs  mux_tools.rs
crates/fold-grpc/: Cargo.toml
crates/fold-grpc/src/: channel.rs  error.rs  handler.rs  lib.rs  registration.rs
crates/fold-pack/: Cargo.toml
crates/fold-pack/src/: client.rs  config.rs  error.rs  handler.rs  lib.rs  manifest.rs
crates/fold-proto/: Cargo.toml  build.rs
crates/fold-proto/proto-src/: fold.proto
crates/fold-proto/src/: lib.rs
(+152 files in other folders)
