# ABOUTME: Workspace root for the coven monorepo
# ABOUTME: Consolidates all coven Rust crates into a single workspace

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/2389-research/coven"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# gRPC
tonic = { version = "0.12", features = ["tls-roots"] }
prost = "0.13"
tonic-build = "0.12"

# SSH
ssh-key = { version = "0.6", features = ["ed25519", "encryption"] }

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

# Filesystem helpers
dirs = "6"
dotenvy = "0.15"

# Testing
tempfile = "3"
insta = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.5"
percent-encoding = "2.3"

# UUID
uuid = { version = "1", features = ["v4"] }

# UniFFI for Swift/Kotlin bindings
uniffi = { version = "0.28", features = ["cli"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
clap_complete = "4"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LLM
mux = { git = "https://github.com/2389-research/mux-rs", branch = "main" }

# Internal crates
coven-proto = { path = "crates/coven-proto" }
coven-ssh = { path = "crates/coven-ssh" }
coven-grpc = { path = "crates/coven-grpc" }
coven-client = { path = "crates/coven-client" }
coven-pack = { path = "crates/coven-pack" }
coven-core = { path = "crates/coven-core" }
coven-agent = { path = "crates/coven-agent" }
coven-swarm = { path = "crates/coven-swarm" }
coven-swarm-backend = { path = "crates/coven-swarm-backend" }
coven-swarm-core = { path = "crates/coven-swarm-core" }
coven-tui = { path = "crates/coven-tui" }
coven-link = { path = "crates/coven-link" }
