[package]
name = "mux-test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_mux"
path = "test_mux_backend.rs"

[dependencies]
fold-core = { path = "../crates/fold-core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
