# ABOUTME: Admin CLI for coven-gateway management
# ABOUTME: Provides commands for principals, bindings, tokens, and agents

[package]
name = "coven-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Admin CLI for coven-gateway"

[[bin]]
name = "coven-admin"
path = "src/main.rs"

[dependencies]
# Internal crates
coven-proto.workspace = true
coven-grpc.workspace = true

# Async
tokio.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true

# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Filesystem/Environment
dirs.workspace = true
dotenvy.workspace = true

# Console output formatting
colored = "2"

# HTTP for metadata
http = "1"
