# ABOUTME: Unified CLI for coven operations
# ABOUTME: Command-line interface for all coven functionality

[package]
name = "coven-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
dotenvy.workspace = true

# Internal coven crates
coven-admin.workspace = true
coven-agent.workspace = true
coven-client.workspace = true
coven-link.workspace = true
coven-matrix-rs.workspace = true
coven-pack.workspace = true
coven-slack-rs.workspace = true
coven-swarm.workspace = true
coven-swarm-core.workspace = true
coven-telegram-rs.workspace = true
coven-tui.workspace = true

[[bin]]
name = "coven"
path = "src/main.rs"
