# ABOUTME: Core agent runtime and execution logic
# ABOUTME: Handles LLM interaction, tool execution, and conversation management

[package]
name = "coven-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Logging
tracing.workspace = true

# LLM
mux.workspace = true
claude-sdk-rs = "1"

# Database
sqlx.workspace = true

# Time
chrono.workspace = true

# URL parsing
url.workspace = true
percent-encoding = "2.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Misc
uuid = { version = "1", features = ["v4"] }
dirs.workspace = true
glob = "0.3"
regex = "1"
tempfile.workspace = true
shellexpand = "3"
