# ABOUTME: Cargo manifest for coven-link device linking tool
# ABOUTME: CLI tool that links a device to a coven-gateway instance

[package]
name = "coven-link"
description = "Device linking tool for coven-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "coven-link"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Filesystem helpers
dirs.workspace = true

# Terminal colors
colored = "2"

# Hostname detection
hostname = "0.3"

# Internal crates
coven-ssh.workspace = true
