# ABOUTME: Cargo manifest for coven-matrix-rs crate
# ABOUTME: Matrix bridge binary that connects Matrix rooms to coven-gateway

[package]
name = "coven-matrix-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Matrix bridge for coven-gateway"

[[bin]]
name = "coven-matrix-bridge"
path = "src/main.rs"

[dependencies]
# Internal crates
coven-proto.workspace = true
coven-grpc.workspace = true
coven-link.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full", "signal"] }
futures.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true

# Matrix SDK
# Note: e2e-encryption feature is enabled for future E2EE support but not yet implemented.
# The recovery_key config option exists to enable E2EE setup when the feature is completed.
matrix-sdk = { version = "0.10", features = ["e2e-encryption", "sqlite"] }

# Config and serialization
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
dirs.workspace = true

# Logging and errors
tracing.workspace = true
coven-log.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# CLI
clap = { workspace = true, features = ["derive", "env"] }
dialoguer.workspace = true

# TUI (for setup wizard)
ratatui.workspace = true
crossterm.workspace = true

# Utilities
uuid = { workspace = true, features = ["v4"] }
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
