# ABOUTME: Terminal user interface for coven
# ABOUTME: Interactive TUI for chatting with AI agents

[package]
name = "coven-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for Coven - Chat with AI agents"

[lib]
name = "coven_tui"
path = "src/lib.rs"

[[bin]]
name = "coven-chat"
path = "src/main.rs"

[dependencies]
# Internal crates
coven-client.workspace = true
coven-grpc.workspace = true
coven-ssh.workspace = true

# TUI
ratatui.workspace = true
crossterm.workspace = true
tui-textarea.workspace = true

# Async
tokio.workspace = true
tokio-stream.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true

# Config & State
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dotenvy.workspace = true
dirs.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
chrono.workspace = true

[dev-dependencies]
insta.workspace = true
