# ABOUTME: Agent binary and entry point
# ABOUTME: Main executable for running fold agents

[package]
name = "fold-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true

# fold-core = { workspace = true }
# fold-pack = { workspace = true }

[[bin]]
name = "fold-agent"
path = "src/main.rs"

[lib]
name = "fold_agent"
path = "src/lib.rs"
