# ABOUTME: Unified CLI for fold operations
# ABOUTME: Command-line interface for all fold functionality

[package]
name = "fold-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
dotenvy.workspace = true

# Internal fold crates
fold-agent.workspace = true
fold-client.workspace = true
fold-pack.workspace = true
fold-swarm.workspace = true
fold-swarm-core.workspace = true
fold-tui.workspace = true

[[bin]]
name = "fold"
path = "src/main.rs"
