# ABOUTME: High-level fold client library
# ABOUTME: User-facing API for interacting with fold services

[package]
name = "fold-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# fold-grpc = { workspace = true }
# fold-ssh = { workspace = true }
