# ABOUTME: Core agent runtime and execution logic
# ABOUTME: Handles LLM interaction, tool execution, and conversation management

[package]
name = "fold-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
mux.workspace = true

# fold-pack = { workspace = true }
