# ABOUTME: Pack trait definitions and utilities
# ABOUTME: Core abstractions for fold agent packs (tool bundles)

[package]
name = "fold-pack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
